Refactored Customer Details Card Alignments issues

--- a/src/app/pages/order-taking-system/customer-card/customer-card.component.scss
+++ b/src/app/pages/order-taking-system/customer-card/customer-card.component.scss
@@ -35,7 +35,7 @@
       font-family: nb-theme(font-secondary);
       font-weight: nb-theme(font-weight-bold);
       color: nb-theme(color-fg-heading);
-      font-size: 1.25rem;
+      font-size: 1rem;
 
       @include nb-for-theme(cosmic) {
         font-weight: nb-theme(font-weight-bolder);
