--- a/src/app/pages/order-taking-system/customer-card/customer-list/customers-list.component.scss
+++ b/src/app/pages/order-taking-system/customer-card/customer-list/customers-list.component.scss
@@ -82,6 +82,6 @@
   .delete-icon {
     position: absolute;
     top: calc(50% - 7px);
-    right: 20px;
+    right: 10px;
   }
 }
